test/TestSuite/Syntax/Errors/adopt_duplicate_child-1.tjp
project "Adopted Tasks" 2011-03-05 +1m

task t1 "T1" {
  task t2 "T2"
}
# MARK: error 7 adopt_duplicate_child
task t3 "T3" {
  adopt t1.t2, t1
}

